# UM_3

./: BinaryStorage.cpp  BinaryStorage.h  CMakeLists.txt  Config.cpp  Config.h  Convertor.cpp  Convertor.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Makefile  Memory.cpp  Memory.h  Parser.h  Processor.cpp  Processor.h  README.md  Tools.cpp  Tools.h  Translator.cpp  Translator.h  UM3.cpp  UM3_syntax.md  UM3_syntax.txt  UM3_using.txt  parser.cpp  parser.h  punched_card.txt
examples/: buble_sort.txt  input_output_mas.txt  max.txt  nod.txt
